--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <h2>About Me</h2>
 
-    <p>Hello! I'm [Your Name], a skilled QA Analyst transitioning to a Data Analyst role. I have expertise in SQL, Python, Tableau, and Power BI.</p>
+    <p>I am a **Data Analyst** with nearly 5 years of experience in leveraging data analysis and advanced analytical techniques to extract actionable insights from complex datasets. My expertise spans healthcare and manufacturing industries, where I have successfully worked on data-driven solutions and visualization projects</p>
 
   </section>
 
