--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 
     <nav>
 
-      <div class="logo">My Portfolio</div>
 
       <ul class="nav-links">
 
         <li><a href="#about">About</a></li>
 
         <li><a href="#projects">Projects</a></li>
+        
+        <li><a href="#experience">Experience</a></li>
 
         <li><a href="#contact">Contact</a></li>
 
@@ -59,15 +60,11 @@
   </section>
 
 
-
   <section id="projects">
 
     <h2>Projects</h2>
 
     <div class="project-container" id="project-list"></div>
-
-  </section>
-
 
 
   <section id="contact">
