--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
     <nav>
 
-
       <ul class="nav-links">
 
         <li><a href="#about">About</a></li>
@@ -28,6 +27,8 @@
         <li><a href="#projects">Projects</a></li>
         
         <li><a href="#experience">Experience</a></li>
+        
+        <li><a href="#education">Education</a></li>
 
         <li><a href="#contact">Contact</a></li>
 
@@ -37,28 +38,21 @@
 
   </header>
 
-
-
   <section id="hero">
 
     <h1>Welcome to My Portfolio</h1>
 
     <p>I'm a Data Analyst passionate about turning data into actionable insights.</p>
 
-    <button onclick="scrollToSection('projects')">View Projects</button>
-
   </section>
-
-
 
   <section id="about">
 
     <h2>About Me</h2>
 
-    <p>I am a **Data Analyst** with nearly 5 years of experience in leveraging data analysis and advanced analytical techniques to extract actionable insights from complex datasets. My expertise spans healthcare and manufacturing industries, where I have successfully worked on data-driven solutions and visualization projects</p>
+    <p>I am a with nearly 5 years of experience in leveraging data analysis and advanced analytical techniques to extract actionable insights from complex datasets. My expertise spans healthcare and manufacturing industries, where I have successfully worked on data-driven solutions and visualization projects.</p>
 
   </section>
-
 
   <section id="projects">
 
@@ -66,6 +60,79 @@
 
     <div class="project-container" id="project-list"></div>
 
+  </section>
+
+  <section id="experience">
+
+    <h2>Work Experience</h2>
+
+    <div class="work-experience">
+      <p class="job-title">System Analyst (Contract)</p>
+      <p class="company">BlueCross BlueShield of Michigan, USA </p>
+      <p class="date">Nov 2021 - Aug 2023</p>
+      <div class="description">
+        <ul>
+          <li>Improved claims processing accuracy by 20% through rigorous testing and validation.</li>
+          <li>Reduced data inconsistencies by 25% using SQL and MS Access for claims data analysis.</li>
+          <li>Developed Power BI dashboards tracking KPIs, reducing claim processing delays by 30%.</li>
+          <li>Automated regression testing using Excel Macros, saving 35% manual effort</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="work-experience">
+      <p class="job-title">Quality Engineer</p>
+      <p class="company">Fuyao Automotive North America, USA</p>
+      <p class="date">Apr 2021 - Oct 2021</p>
+      <div class="description">
+        <ul>
+          <li>Reduced customer complaints by 25% through root cause analysis and statistical tools.</li>
+          <li>Optimized supply chain quality, cutting scrap and downtime by 50%.</li>
+          <li>Built Tableau dashboards to track KPIs, boosting overall equipment effectiveness (OEE) by 10%.</li>
+        </ul>
+      </div>
+    </div>
+
+        <div class="work-experience">
+      <p class="job-title">Assistant System Engineer</p>
+      <p class="company">Tata Consultancy Services Ltd., India</p>
+      <p class="date">Jan 2016 - Sept 2017</p>
+      <div class="description">
+        <ul>
+          <li>Reduced customer complaints by 25% through root cause analysis and statistical tools.</li>
+          <li>Optimized supply chain quality, cutting scrap and downtime by 50%.</li>
+          <li>Built Tableau dashboards to track KPIs, boosting overall equipment effectiveness (OEE) by 10%.</li>
+        </ul>
+      </div>
+    </div>
+
+  </section>
+
+  <section id="education">
+
+    <h2>Education</h2>
+
+    <div class="education-details">
+      <p class="degree">Master of Science in Engineering</p>
+      <p class="institution">University of Michigan, Dearborn, USA</p>
+      <p class="date">2018 - 2020</p>
+      <div class="description">
+        <ul>
+        </ul>
+      </div>
+    </div>
+
+    <div class="education-details">
+      <p class="degree">Bachelor of Technology in Engineering</p>
+      <p class="institution">Jawaharlal Nehru Technological University</p>
+      <p class="date">2011 - 2015</p>
+      <div class="description">
+        <ul>
+        </ul>
+      </div>
+    </div>
+  
+  </section>
 
   <section id="contact">
 
@@ -85,15 +152,11 @@
 
   </section>
 
-
-
   <footer>
 
     <p>&copy; 2024 My Portfolio</p>
 
   </footer>
-
-
 
   <script src="script.js"></script>
 
