--- a/index.html
+++ b/index.html
@@ -4,161 +4,205 @@
 
 <head>
 
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Portfolio</title>
+    <title>Revathi Putrevu | Data Analyst</title>
 
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-  <header>
+    <header>
+
+        <h1>Revathi Putrevu</h1>
+
+        <p>Detail-oriented Data Analyst with 5 years of experience in leveraging data for actionable insights.</p>
+
+    </header>
+
+
 
     <nav>
 
-      <ul class="nav-links">
+        <ul>
 
-        <li><a href="#about">About</a></li>
+            <li><a href="#about">About</a></li>
 
-        <li><a href="#projects">Projects</a></li>
-        
-        <li><a href="#experience">Experience</a></li>
-        
-        <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
 
-        <li><a href="#contact">Contact</a></li>
+            <li><a href="#experience">Experience</a></li>
 
-      </ul>
+            <li><a href="#education">Education</a></li>
+
+            <li><a href="#projects">Projects</a></li>
+
+        </ul>
 
     </nav>
 
-  </header>
 
-  <section id="hero">
 
-    <h1>Welcome to My Portfolio</h1>
+    <main>
 
-    <p>I'm a Data Analyst passionate about turning data into actionable insights.</p>
+        <section id="about">
 
-  </section>
+            <h2>About</h2>
 
-  <section id="about">
+            <p>I am a results-driven Data Analyst skilled in SQL, Python, Tableau, and Power BI. I excel in creating interactive dashboards, visualizing trends, and delivering insights to optimize business performance.</p>
 
-    <h2>About Me</h2>
+        </section>
 
-    <p>I am a with nearly 5 years of experience in leveraging data analysis and advanced analytical techniques to extract actionable insights from complex datasets. My expertise spans healthcare and manufacturing industries, where I have successfully worked on data-driven solutions and visualization projects.</p>
 
-  </section>
 
-  <section id="projects">
+        <section id="skills">
 
-    <h2>Projects</h2>
+            <h2>Skills</h2>
 
-    <div class="project-container" id="project-list"></div>
+            <ul>
 
-  </section>
+                <li>SQL, Python, R</li>
 
-  <section id="experience">
+                <li>Power BI, Tableau</li>
 
-    <h2>Work Experience</h2>
+                <li>Minitab, MATLAB, SAS EM</li>
 
-    <div class="work-experience">
-      <p class="job-title">System Analyst (Contract)</p>
-      <p class="company">BlueCross BlueShield of Michigan, USA </p>
-      <p class="date">Nov 2021 - Aug 2023</p>
-      <div class="description">
-        <ul>
-          <li>Improved claims processing accuracy by 20% through rigorous testing and validation.</li>
-          <li>Reduced data inconsistencies by 25% using SQL and MS Access for claims data analysis.</li>
-          <li>Developed Power BI dashboards tracking KPIs, reducing claim processing delays by 30%.</li>
-          <li>Automated regression testing using Excel Macros, saving 35% manual effort</li>
-        </ul>
-      </div>
-    </div>
+                <li>Google Analytics</li>
 
-    <div class="work-experience">
-      <p class="job-title">Quality Engineer</p>
-      <p class="company">Fuyao Automotive North America, USA</p>
-      <p class="date">Apr 2021 - Oct 2021</p>
-      <div class="description">
-        <ul>
-          <li>Reduced customer complaints by 25% through root cause analysis and statistical tools.</li>
-          <li>Optimized supply chain quality, cutting scrap and downtime by 50%.</li>
-          <li>Built Tableau dashboards to track KPIs, boosting overall equipment effectiveness (OEE) by 10%.</li>
-        </ul>
-      </div>
-    </div>
+                <li>MS Access, SQL Server</li>
 
-        <div class="work-experience">
-      <p class="job-title">Assistant System Engineer</p>
-      <p class="company">Tata Consultancy Services Ltd., India</p>
-      <p class="date">Jan 2016 - Sept 2017</p>
-      <div class="description">
-        <ul>
-          <li>Reduced customer complaints by 25% through root cause analysis and statistical tools.</li>
-          <li>Optimized supply chain quality, cutting scrap and downtime by 50%.</li>
-          <li>Built Tableau dashboards to track KPIs, boosting overall equipment effectiveness (OEE) by 10%.</li>
-        </ul>
-      </div>
-    </div>
+                <li>JIRA, HP Rational ClearQuest</li>
 
-  </section>
+            </ul>
 
-  <section id="education">
+        </section>
 
-    <h2>Education</h2>
 
-    <div class="education-details">
-      <p class="degree">Master of Science in Engineering</p>
-      <p class="institution">University of Michigan, Dearborn, USA</p>
-      <p class="date">2018 - 2020</p>
-      <div class="description">
-        <ul>
-        </ul>
-      </div>
-    </div>
 
-    <div class="education-details">
-      <p class="degree">Bachelor of Technology in Engineering</p>
-      <p class="institution">Jawaharlal Nehru Technological University</p>
-      <p class="date">2011 - 2015</p>
-      <div class="description">
-        <ul>
-        </ul>
-      </div>
-    </div>
-  
-  </section>
+        <section id="experience">
 
-  <section id="contact">
+            <h2>Experience</h2>
 
-    <h2>Contact Me</h2>
+            <div>
 
-    <form id="contact-form">
+                <h3>System Analyst - Vktek Inc.</h3>
 
-      <input type="text" id="name" placeholder="Your Name" required>
+                <p><i>Nov 2021 – Aug 2023</i></p>
 
-      <input type="email" id="email" placeholder="Your Email" required>
+                <ul>
 
-      <textarea id="message" placeholder="Your Message" required></textarea>
+                    <li>Managed claims using NASCO mainframe applications, improving accuracy by 20%.</li>
 
-      <button type="submit">Send</button>
+                    <li>Developed Power BI dashboards tracking KPIs, reducing processing delays by 30%.</li>
 
-    </form>
+                    <li>Automated repetitive tasks with Excel Macros, cutting manual effort by 35%.</li>
 
-  </section>
+                </ul>
 
-  <footer>
+            </div>
 
-    <p>&copy; 2024 My Portfolio</p>
+            <div>
 
-  </footer>
+                <h3>Quality Engineer - Fuyao Automotive North America</h3>
 
-  <script src="script.js"></script>
+                <p><i>Apr 2021 – Oct 2021</i></p>
+
+                <ul>
+
+                    <li>Utilized statistical tools to reduce customer complaints by 25%.</li>
+
+                    <li>Developed Tableau dashboards to track KPIs, boosting OEE by 10%.</li>
+
+                </ul>
+
+            </div>
+
+            <div>
+
+                <h3>Assistant Systems Engineer - Tata Consultancy Services</h3>
+
+                <p><i>Jan 2016 – Sep 2017</i></p>
+
+                <ul>
+
+                    <li>Conducted end-to-end testing of mobile applications, improving app stability.</li>
+
+                    <li>Streamlined regression testing with Selenium WebDriver.</li>
+
+                </ul>
+
+            </div>
+
+        </section>
+
+
+
+        <section id="education">
+
+            <h2>Education</h2>
+
+            <p><b>University of Michigan, Dearborn</b> <br> Master of Science in Engineering (2018 – 2020)</p>
+
+            <p><b>Jawaharlal Nehru Technological University, India</b> <br> Bachelor of Technology in Engineering (2011 – 2015)</p>
+
+        </section>
+
+
+
+        <section id="projects">
+
+            <h2>Projects</h2>
+
+            <div>
+
+                <h3>Sales Optimization for Car Resale Business</h3>
+
+                <p><i>University of Texas, Austin - Data Analytics Program</i></p>
+
+                <ul>
+
+                    <li>Utilized MySQL and Python for sales analysis, improving retention rates by 20%.</li>
+
+                    <li>Developed Tableau and Power BI dashboards to reverse declining trends.</li>
+
+                </ul>
+
+            </div>
+
+            <div>
+
+                <h3>Loan Data Prediction</h3>
+
+                <p><i>TopGrads, USA</i></p>
+
+                <ul>
+
+                    <li>Analyzed loan datasets to predict fraud with 80% accuracy.</li>
+
+                    <li>Applied SAS models for risk factor analysis and fraud prevention strategies.</li>
+
+                </ul>
+
+            </div>
+
+        </section>
+
+    </main>
+
+
+
+    <footer>
+
+        <p>Contact: <a href="mailto:revathip0397@gmail.com">revathip0397@gmail.com</a> | Phone: (812)-558-8598</p>
+
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/revathiputrevu" target="_blank">linkedin.com/in/revathiputrevu</a></p>
+
+    </footer>
+
+    <script src="script.js"></script>
 
 </body>
 
