--- a/index.html
+++ b/index.html
@@ -4,205 +4,101 @@
 
 <head>
 
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Revathi Putrevu | Data Analyst</title>
+  <title>Portfolio</title>
 
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
 
-    <header>
-
-        <h1>Revathi Putrevu</h1>
-
-        <p>Detail-oriented Data Analyst with 5 years of experience in leveraging data for actionable insights.</p>
-
-    </header>
-
-
+  <header>
 
     <nav>
 
-        <ul>
+      <div class="logo">My Portfolio</div>
 
-            <li><a href="#about">About</a></li>
+      <ul class="nav-links">
 
-            <li><a href="#skills">Skills</a></li>
+        <li><a href="#about">About</a></li>
 
-            <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
 
-            <li><a href="#education">Education</a></li>
+        <li><a href="#contact">Contact</a></li>
 
-            <li><a href="#projects">Projects</a></li>
-
-        </ul>
+      </ul>
 
     </nav>
 
+  </header>
 
 
-    <main>
 
-        <section id="about">
+  <section id="hero">
 
-            <h2>About</h2>
+    <h1>Welcome to My Portfolio</h1>
 
-            <p>I am a results-driven Data Analyst skilled in SQL, Python, Tableau, and Power BI. I excel in creating interactive dashboards, visualizing trends, and delivering insights to optimize business performance.</p>
+    <p>I'm a Data Analyst passionate about turning data into actionable insights.</p>
 
-        </section>
+    <button onclick="scrollToSection('projects')">View Projects</button>
 
+  </section>
 
 
-        <section id="skills">
 
-            <h2>Skills</h2>
+  <section id="about">
 
-            <ul>
+    <h2>About Me</h2>
 
-                <li>SQL, Python, R</li>
+    <p>Hello! I'm [Your Name], a skilled QA Analyst transitioning to a Data Analyst role. I have expertise in SQL, Python, Tableau, and Power BI.</p>
 
-                <li>Power BI, Tableau</li>
+  </section>
 
-                <li>Minitab, MATLAB, SAS EM</li>
 
-                <li>Google Analytics</li>
 
-                <li>MS Access, SQL Server</li>
+  <section id="projects">
 
-                <li>JIRA, HP Rational ClearQuest</li>
+    <h2>Projects</h2>
 
-            </ul>
+    <div class="project-container" id="project-list"></div>
 
-        </section>
+  </section>
 
 
 
-        <section id="experience">
+  <section id="contact">
 
-            <h2>Experience</h2>
+    <h2>Contact Me</h2>
 
-            <div>
+    <form id="contact-form">
 
-                <h3>System Analyst - Vktek Inc.</h3>
+      <input type="text" id="name" placeholder="Your Name" required>
 
-                <p><i>Nov 2021 – Aug 2023</i></p>
+      <input type="email" id="email" placeholder="Your Email" required>
 
-                <ul>
+      <textarea id="message" placeholder="Your Message" required></textarea>
 
-                    <li>Managed claims using NASCO mainframe applications, improving accuracy by 20%.</li>
+      <button type="submit">Send</button>
 
-                    <li>Developed Power BI dashboards tracking KPIs, reducing processing delays by 30%.</li>
+    </form>
 
-                    <li>Automated repetitive tasks with Excel Macros, cutting manual effort by 35%.</li>
+  </section>
 
-                </ul>
 
-            </div>
 
-            <div>
+  <footer>
 
-                <h3>Quality Engineer - Fuyao Automotive North America</h3>
+    <p>&copy; 2024 My Portfolio</p>
 
-                <p><i>Apr 2021 – Oct 2021</i></p>
+  </footer>
 
-                <ul>
 
-                    <li>Utilized statistical tools to reduce customer complaints by 25%.</li>
 
-                    <li>Developed Tableau dashboards to track KPIs, boosting OEE by 10%.</li>
-
-                </ul>
-
-            </div>
-
-            <div>
-
-                <h3>Assistant Systems Engineer - Tata Consultancy Services</h3>
-
-                <p><i>Jan 2016 – Sep 2017</i></p>
-
-                <ul>
-
-                    <li>Conducted end-to-end testing of mobile applications, improving app stability.</li>
-
-                    <li>Streamlined regression testing with Selenium WebDriver.</li>
-
-                </ul>
-
-            </div>
-
-        </section>
-
-
-
-        <section id="education">
-
-            <h2>Education</h2>
-
-            <p><b>University of Michigan, Dearborn</b> <br> Master of Science in Engineering (2018 – 2020)</p>
-
-            <p><b>Jawaharlal Nehru Technological University, India</b> <br> Bachelor of Technology in Engineering (2011 – 2015)</p>
-
-        </section>
-
-
-
-        <section id="projects">
-
-            <h2>Projects</h2>
-
-            <div>
-
-                <h3>Sales Optimization for Car Resale Business</h3>
-
-                <p><i>University of Texas, Austin - Data Analytics Program</i></p>
-
-                <ul>
-
-                    <li>Utilized MySQL and Python for sales analysis, improving retention rates by 20%.</li>
-
-                    <li>Developed Tableau and Power BI dashboards to reverse declining trends.</li>
-
-                </ul>
-
-            </div>
-
-            <div>
-
-                <h3>Loan Data Prediction</h3>
-
-                <p><i>TopGrads, USA</i></p>
-
-                <ul>
-
-                    <li>Analyzed loan datasets to predict fraud with 80% accuracy.</li>
-
-                    <li>Applied SAS models for risk factor analysis and fraud prevention strategies.</li>
-
-                </ul>
-
-            </div>
-
-        </section>
-
-    </main>
-
-
-
-    <footer>
-
-        <p>Contact: <a href="mailto:revathip0397@gmail.com">revathip0397@gmail.com</a> | Phone: (812)-558-8598</p>
-
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/revathiputrevu" target="_blank">linkedin.com/in/revathiputrevu</a></p>
-
-    </footer>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
